[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ItemsContainer.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ItemSelectionMenu.gd" type="Script" id=2]
[ext_resource path="res://Art/pixel_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/NinePatchRect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/pixel_font_big.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 5 )

[node name="ItemSelectionMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
mouse_filter = 2
mouse_default_cursor_shape = 4
theme = SubResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" parent="." instance=ExtResource( 4 )]
region_rect = Rect2( 20.2937, 10.0325, 80.0393, 117.148 )
patch_margin_bottom = 8

[node name="VBoxContainer" type="Container" parent="."]
margin_left = 48.0
margin_top = -40.0
margin_right = 592.0
margin_bottom = 337.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 544.0
margin_bottom = 122.0
mouse_filter = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 160.0
margin_right = 384.0
margin_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource( 2 )
text = "

Choose an Item

"
align = 1
uppercase = true

[node name="ItemsContainer" type="HBoxContainer" parent="VBoxContainer"]
pause_mode = 2
margin_top = 93.0
margin_right = 544.0
margin_bottom = 377.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
