[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/ItemSelectionMenu.gd" type="Script" id=2]
[ext_resource path="res://Art/pixel_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Art/NinePatchRect.tscn" type="PackedScene" id=7]
[ext_resource path="res://Art/pixel_font_big.tres" type="DynamicFont" id=8]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 8 )

[node name="ItemSelectionModal" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 4
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" parent="." instance=ExtResource( 7 )]
region_rect = Rect2( 20.2937, 10.0325, 80.0393, 117.148 )
patch_margin_bottom = 8

[node name="VBoxContainer" type="Container" parent="."]
margin_left = 48.0
margin_top = -40.0
margin_right = 592.0
margin_bottom = 337.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 544.0
margin_bottom = 122.0
mouse_filter = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 160.0
margin_right = 384.0
margin_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource( 2 )
text = "

Choose an Item

"
align = 1
uppercase = true

[node name="ItemsContainer" type="HBoxContainer" parent="VBoxContainer"]
pause_mode = 2
margin_top = 93.0
margin_right = 544.0
margin_bottom = 377.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemEntry1" type="VBoxContainer" parent="VBoxContainer/ItemsContainer"]
margin_right = 178.0
margin_bottom = 284.0
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3

[node name="Item Visual" type="VBoxContainer" parent="VBoxContainer/ItemsContainer/ItemEntry1"]
margin_right = 178.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2
mouse_default_cursor_shape = 2
alignment = 2

[node name="Stats1" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry1"]
margin_top = 94.0
margin_right = 178.0
margin_bottom = 122.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.184314, 0.184314, 1 )
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats2" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry1"]
margin_top = 126.0
margin_right = 178.0
margin_bottom = 154.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats3" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry1"]
margin_top = 158.0
margin_right = 178.0
margin_bottom = 187.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats4" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry1"]
margin_top = 191.0
margin_right = 178.0
margin_bottom = 219.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats5" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry1"]
margin_top = 223.0
margin_right = 178.0
margin_bottom = 251.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats6" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry1"]
margin_top = 255.0
margin_right = 178.0
margin_bottom = 284.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemEntry2" type="VBoxContainer" parent="VBoxContainer/ItemsContainer"]
margin_left = 182.0
margin_right = 361.0
margin_bottom = 284.0
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3

[node name="Item Visual" type="VBoxContainer" parent="VBoxContainer/ItemsContainer/ItemEntry2"]
margin_right = 179.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2
mouse_default_cursor_shape = 2
alignment = 2

[node name="Stats1" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry2"]
margin_top = 94.0
margin_right = 179.0
margin_bottom = 122.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats2" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry2"]
margin_top = 126.0
margin_right = 179.0
margin_bottom = 154.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats3" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry2"]
margin_top = 158.0
margin_right = 179.0
margin_bottom = 187.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats4" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry2"]
margin_top = 191.0
margin_right = 179.0
margin_bottom = 219.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats5" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry2"]
margin_top = 223.0
margin_right = 179.0
margin_bottom = 251.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats6" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry2"]
margin_top = 255.0
margin_right = 179.0
margin_bottom = 284.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemEntry3" type="VBoxContainer" parent="VBoxContainer/ItemsContainer"]
margin_left = 365.0
margin_right = 544.0
margin_bottom = 284.0
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3

[node name="Item Visual" type="VBoxContainer" parent="VBoxContainer/ItemsContainer/ItemEntry3"]
margin_right = 179.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2
mouse_default_cursor_shape = 2
alignment = 2

[node name="Stats1" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry3"]
margin_top = 94.0
margin_right = 179.0
margin_bottom = 122.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats2" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry3"]
margin_top = 126.0
margin_right = 179.0
margin_bottom = 154.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats3" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry3"]
margin_top = 158.0
margin_right = 179.0
margin_bottom = 187.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats4" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry3"]
margin_top = 191.0
margin_right = 179.0
margin_bottom = 219.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats5" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry3"]
margin_top = 223.0
margin_right = 179.0
margin_bottom = 251.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats6" type="Label" parent="VBoxContainer/ItemsContainer/ItemEntry3"]
margin_top = 255.0
margin_right = 179.0
margin_bottom = 284.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModalTimer" type="Timer" parent="."]
one_shot = true
[connection signal="gui_input" from="VBoxContainer/ItemsContainer/ItemEntry1" to="VBoxContainer/ItemsContainer" method="_on_ItemEntry1_gui_input"]
[connection signal="gui_input" from="VBoxContainer/ItemsContainer/ItemEntry2" to="VBoxContainer/ItemsContainer" method="_on_ItemEntry2_gui_input"]
[connection signal="gui_input" from="VBoxContainer/ItemsContainer/ItemEntry3" to="VBoxContainer/ItemsContainer" method="_on_ItemEntry3_gui_input"]
